--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Assistant:200|Cutive+Mono|Lacquer|Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>photography</title>
   </head>
   <body style="margin: 0px">
